[Styling][Functionality] :1234:  Added screen Styling, Ajax request for table content, Esc functionality

--- a/static/src/css/cssfile.css
+++ b/static/src/css/cssfile.css
@@ -1,16 +1,45 @@
-.DemoClass 
-{
-    width: 88%;
-    position: absolute;
-    height: 70%;
-    background-color:gray;
-    left:auto;
-    right:auto;
+body.ticketList:before {
+    content: none;
+}
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent {
+    background-color: black;
+    height: 100%;
+    max-width: none;
+    padding: 0;
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
 }
 
-.TextDemoClass
-{
-    font-size:30px;
-    color:white;
-    text-align:center;
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container{
+    height: 100%;
+    overflow: hidden;
+    
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table{
+    overflow: hidden;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table th{
+    font-size: 40px;
+    text-align: center;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table td{
+    color: black;
+    font-size: 60px;
+    padding-left: 10px;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table tr:nth-child(even) {
+    background-color: rgba(171, 183, 183, 0.5);
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table#non-paid-tickets-table{
+    background-color: #00B16A;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table#paid-tickets-table{
+    background-color: #F9BF3B;
 }
