--- a/views/menus.xml
+++ b/views/menus.xml
@@ -8,7 +8,7 @@
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <div class="custom-container">
-                    <table class="col-xs-6" id="non-paid-tickets-table">
+                    <table class="col-xs-6" id="drafts-tck-table">
                         <thead>
                             <tr>
                                 <th>En Proceso...</th>
@@ -17,7 +17,7 @@
                         <tbody>
                         </tbody>
                     </table>
-                    <table class="col-xs-6" id="paid-tickets-table">
+                    <table class="col-xs-6" id="orders-tck-table">
                         <thead>
                             <tr>
                                 <th>Listo para cobro</th>
