--- a/static/src/css/cssfile.css
+++ b/static/src/css/cssfile.css
@@ -1,8 +1,10 @@
+/* Global styles */
+
 body.ticketList:before {
     content: none;
 }
 body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent {
-    background-color: black;
+    background-color: #bdc3c7;
     height: 100%;
     max-width: none;
     padding: 0;
@@ -15,6 +17,8 @@ body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .
     height: 100%;
     overflow: hidden;
 }
+
+/* Table Implementation styles */
 
 body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table{
     overflow: hidden;
@@ -33,14 +37,100 @@ body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .
     vertical-align: middle;
 }
 
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table td:first-child{
+    font-weight: bold;
+    text-align: center;
+    width: 25%;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table td:first-child .ticket{
+    display: inline-block;
+    width: 100%;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table td:first-child .header{
+    font-size: 20px;
+    font-weight: normal;
+}
+
 body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table tr:nth-child(even) {
     background-color: rgba(171, 183, 183, 0.5);
 }
 
 body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table#drafts-tck-table{
-    background-color: #F9BF3B;
+    background-color: #2980b9;
 }
 
 body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container table#orders-tck-table{
-    background-color: #00B16A;
+    background-color: #44AF69;
+}
+
+/* FlexBox Implementation styles */
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container {
+    overflow: hidden;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .custom-container {
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table {
+    color: #000;
+    width: 50%;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .table-header {
+    font-size: 40px;
+    text-align: center;
+}
+    
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .table-body {
+    display: flex;
+    flex-direction: column;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row {
+    display: flex;
+    flex-direction: row;
+    font-size: 48px;
+    height: 150px;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row:nth-child(even) {
+    background-color: rgba(171, 183, 183, 0.5);
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row .ticket {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row .ticket.ticket-number {
+    font-weight: bold;
+    width: 20%;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row .ticket.ticket-number .title {
+    font-size: 14px;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row .ticket.ticket-number .number {
+    font-size: 60px;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent .table .ticket-row .ticket.ticket-info {
+    align-items: flex-start;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent #drafts-tck-table.table .table-body {
+    background-color: #2980b9;
+}
+
+body.ticketList .oe_view_manager_view_list .oe_list.oe_view .oe_view_nocontent #orders-tck-table.table .table-body {
+    background-color: #44AF69;
 }
